--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
+    "@types/core-js": "^2.5.5",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   },
